--- a/web/front/inc/css/style.css
+++ b/web/front/inc/css/style.css
@@ -64,7 +64,11 @@ html {
     border-radius: 0 0 10px 10px;
   }
   
-  
+  .allowed{
+  }
+
+  .not_allowed{
+  }
   
   /* TABS */
   
@@ -82,7 +86,7 @@ html {
   /* FORM TYPOGRAPHY*/
   
   input[type=button], input[type=submit], input[type=reset]  {
-    background-color: #56baed;
+    background-color: #04e99d;
     border: none;
     color: white;
     padding: 15px 80px;
@@ -91,11 +95,11 @@ html {
     display: inline-block;
     text-transform: uppercase;
     font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    -webkit-box-shadow: 0 10px 30px 0 #03c987;
+    box-shadow: 0 10px 30px 0 #03c987;
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
+    margin: 15px 20px 40px 20px;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
@@ -104,7 +108,7 @@ html {
   }
   
   input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-    background-color: #39ace7;
+    background-color: #03c987;
   }
   
   input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
