--- a/prod/front/modulo/inc/css/style.css
+++ b/prod/front/modulo/inc/css/style.css
@@ -238,3 +238,14 @@ iframe {
     color: #fff;
     font-size: 120%;
 }
+
+
+.aviso{
+    background-color: #e9d6a2;
+    color: #333;
+    font-size: 110%;
+    text-align: center;
+    border-radius: 50px;
+    padding: 20px 20px 10px 20px;
+    margin: 20px 0 40px 0;
+}
