--- a/prod/front/modulo/inc/css/style.css
+++ b/prod/front/modulo/inc/css/style.css
@@ -58,6 +58,7 @@ h3 {
     margin-bottom: 15px;
     text-transform: uppercase;
     font-weight: 300;
+    color: #fff;
 }
 
 /*--------Buttons---------*/
@@ -248,4 +249,15 @@ iframe {
     border-radius: 50px;
     padding: 20px 20px 10px 20px;
     margin: 20px 0 40px 0;
+}
+
+.btns-div{
+    margin: 40px 0;
+}
+
+.referencia img{
+    width: 80%;
+    height: auto;
+    margin-left: 10%;
+    margin-right: auto;
 }
