Create system for turning off the module

--- a/prod/front/modulo/inc/css/style.css
+++ b/prod/front/modulo/inc/css/style.css
@@ -255,9 +255,9 @@ iframe {
     margin: 40px 0;
 }
 
-.referencia img{
+/* .referencia img{
     width: 80%;
     height: auto;
     margin-left: 10%;
     margin-right: auto;
-}
+} */
