--- a/prod/front/modulo/inc/css/style.css
+++ b/prod/front/modulo/inc/css/style.css
@@ -196,7 +196,7 @@ iframe {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: rgb(179, 176, 15);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -215,6 +215,10 @@ iframe {
   
   input:checked + .slider {
     background-color: rgb(0, 138, 119);
+  }
+  
+  input:disabled + .slider {
+    background-color: #ccc;
   }
   
   input:focus + .slider {
@@ -261,3 +265,29 @@ iframe {
     margin-left: 10%;
     margin-right: auto;
 } */
+
+
+/* LEGENDA */
+
+#legenda{
+    color: #fff;
+}
+
+#legendaLigado{
+    display: inline-block;
+    padding: 10px 5px;
+    border-radius: 10px;
+    background-color: rgb(0, 138, 119);
+}
+#legendaDesligado{
+    display: inline-block;
+    padding: 10px 5px;
+    border-radius: 10px;
+    background-color: rgb(179, 176, 15);
+}
+#legendaBloqueado{
+    display: inline-block;
+    padding: 10px 5px;
+    border-radius: 10px;
+    background-color: #ccc;
+}
