--- a/prod/front/modulo/inc/css/style.css
+++ b/prod/front/modulo/inc/css/style.css
@@ -196,7 +196,7 @@ iframe {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgb(179, 176, 15);
+    background-color: rgb(214, 202, 27);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -256,7 +256,7 @@ iframe {
 }
 
 .btns-div{
-    margin: 40px 0;
+    margin: 24px 0;
 }
 
 /* .referencia img{
@@ -278,16 +278,22 @@ iframe {
     padding: 10px 5px;
     border-radius: 10px;
     background-color: rgb(0, 138, 119);
+    width: 110px;
+    text-align: center;
 }
 #legendaDesligado{
     display: inline-block;
     padding: 10px 5px;
     border-radius: 10px;
-    background-color: rgb(179, 176, 15);
+    background-color: rgb(214, 202, 27);
+    width: 110px;
+    text-align: center;
 }
 #legendaBloqueado{
     display: inline-block;
     padding: 10px 5px;
     border-radius: 10px;
     background-color: #ccc;
+    width: 110px;
+    text-align: center;
 }
